# DMARCer

./: .gitignore  README.md  dmarc-analyzer.py  dmarc_report.html  example_report.html  pyproject.toml  requirements.txt
src/: __init__.py  cli.py
src/analysis/: analyzer.py
src/parsers/: dmarc_parser.py
src/reporting/: html_report.py  text_report.py
src/utils/: helpers.py
test_reports/: failed_auth.xml  mixed_auth.xml  successful_auth.xml
