[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmarc-analyzer"
version = "1.0.0"
description = "Analyze DMARC XML reports and provide authentication result summaries"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "defusedxml>=0.7.1",
    "matplotlib>=3.10.3",
    "tabulate>=0.9.0",
]

[project.scripts]
dmarc-analyzer = "dmarc_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"} 